--- a/project.html
+++ b/project.html
@@ -320,40 +320,40 @@
                     <img class="menber-img" src="team/history/IMG_7557.JPG" alt="">
                     <h2>謝儀蓁</h2>
                     <p>美術設計</p>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="zxc911210@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text1" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="Butter fire前團員yee"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/history/IMG_3456.jpg" alt="">
                     <h2>何貞禎</h2>
                     <p>美術設計</p>
-                    <button onclick="showText(this)" data-target="#work-text2" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="tina32188828@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text2" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text2" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="大家好 歡迎大家來認識我"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text2" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-3">
                     <img class="menber-img" src="team/history/IMG_3446.JPG" alt="">
                     <h2>林煜家</h2>
                     <p>遊戲資料整理</p>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="lth75289996@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text3" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="大家好 歡迎大家來認識何貞禎"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text3" class="work-text"><h4></h4></div>
                  </div>
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/history/IMG_5955.JPG" alt="">
                     <h2>黃鉦詠</h2>
                     <p>遊戲企劃</p>
-                    <button onclick="showText(this)" data-target="#work-text4" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="chris38565407@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text4" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text4" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text4" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="大家好 我叫Jason"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text4" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
@@ -413,19 +413,21 @@
                     <img class="menber-img" src="team/young/形象照(已修.jpg" alt="">
                     <h2>黃旭崙</h2>
                     <p>美術設計、卡牌設計</p>
-                    <button><img class="work-1" src="img-project/mail 1.png" alt=""></button>
-                    <button><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
-                    <button><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="ryder665117@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="112全國運動會手球男子組第七名"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="Arrived and ready"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text1" class="work-text"><h4></h4></div>            
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="img-project/Member Photo.png" alt="">
                     <h2>釀恩‧塔給鹿敦</h2>
                     <p>美術設計、卡牌設計</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="abc0960570057@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text2" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
                 <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
