--- a/project1.html
+++ b/project1.html
@@ -161,30 +161,34 @@
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/nature/1000013037.jpg" alt="">
                     <h2>葉奕岑</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
-                </div>
+                    <p>3D建模 程式-設計 2D動畫</p>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="metancyu113@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="冉色斯動畫股份有限公司_暑期實習、112年資訊素養圖文競賽 優等、私人委託接案中"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="https://sherry98044.wixsite.com/ashuan01portfolio"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="靠自己努力琢磨畫技的利姆露推。"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text2" class="work-text"><h4></h4></div></div>
                 <div class="menber" id="menber-3">
                     <img class="menber-img" src="team/nature/IMG_4460.JPG" alt="">
                     <h2>連相碩</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
+                    <p>3D建模 程式設計 2D動畫</p>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="metancyu113@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text3" class="work-text"><h4></h4></div></div>
                  </div>
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/nature/IMG_0894.JPG" alt="">
                     <h2>盧繼浩</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>主程式設計</p>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="metancyu113@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text4" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
-                <img class="description-5" src="img-project/周邊4 (2).png" alt="">
+                <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
             </div>
         </div>
     </div>
@@ -232,30 +236,35 @@
                 <div class="menber" id="menber-1">
                     <img class="menber-img" src="team/river/IMG_1276.jpg" alt="">
                     <h2>黃曉柔</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>程式設計</p>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="st1472536@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="2017亞洲兒童電影節-入圍      2019國際青少年既兒童電影節-參訪"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="https://st1472536.wixsite.com/ouo_424242-1"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/river/IMG_0973.JPG" alt="">
                     <h2>李心瑜</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>劇情編撰</p>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="xinyu104047@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text2" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/river/IMG_1270.JPG" alt="">
                     <h2>楊博旭</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
+                    <p>美術設計</p>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="yeobooshe720@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="晚睡協會常任理事三好學生：好困、好餓、好想睡"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="愛摸魚"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text3" class="work-text"><h4></h4></div>
                  </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
-                <img class="description-5" src="img-project/周邊4 (2).png" alt="">
+                <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
             </div>
         </div>
     </div>
@@ -305,31 +314,34 @@
                     <img class="menber-img" src="team/witch/蘇.jpg" alt="">
                     <h2>蘇皓</h2>
                     <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="sw91123me@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="國小擔任數學小老師"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="當歌手...是我最想當的"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/witch/IMG_5858.JPG" alt="">
                     <h2>黃詠傑</h2>
                     <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="jacky920525@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="1個月訂閱好傑寶"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="https://nova.gd/@jay0525"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="all roads lead to me____Faker"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text2" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/witch/閔.jpg" alt="">
                     <h2>許博閔</h2>
                     <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="wiiu1234th@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="邊緣社社長、國小100m金牌"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="https://reurl.cc/Gp8dbx (作品集)"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="No Art No Life"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text3" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
-                <img class="description-5" src="img-project/周邊4 (2).png" alt="">
+                <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
             </div>
         </div>
     </div>
@@ -340,7 +352,7 @@
                 <h2>Crossroads</h2>
                 <h4>#依附關係 #心理測驗</h4>
                 <p>
-                    指導老師:黃國鴻教授 張高賓教授<br>
+                    指導老師:王國鴻教授 張高賓教授<br>
                     組員名字:陳玟靜 王晴榆 林欣霓
                 </p>
                 <img class="light-1" src="img-project/Ellipse 5 (2).png" alt="">
@@ -380,30 +392,32 @@
                 <div class="menber" id="menber-1">
                     <img class="menber-img" src="team/heart/林欣霓個人照.jpg" alt="">
                     <h2>林欣霓</h2>
-                    <p>負責工作</p>
-                    <button onclick="showText(this)" data-text="ashelyyang068@gmail.com" data-target="#work-text1"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="影響新劇場16歲少年扮戲第十屆製作助理2024嘉大業大提案競賽第三名"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="campsite.bio/ashu616_"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="沒有獵人卡包的美妝博主烈焰之咆哮的頭號粉絲"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <p>腳本設計</p>
+                    <button onclick="showText(this)" data-text="money104237@gmail.com" data-target="#work-text1"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="參與 Golden Wave in Taiwan"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="I'm tiger🐯"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/heart/IMG_3481.JPEG" alt="">
                     <h2>王晴榆</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>網頁設計</p>
+                    <button onclick="showText(this)" data-text="slime080106@gmail.com" data-target="#work-text2"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/heart/IMG_5768.JPG" alt="">
                     <h2>陳玟靜</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>美術設計</p>
+                    <button onclick="showText(this)" data-text="z044108521@gmail.com" data-target="#work-text3"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="https://www.instagram.com/qu0_drawing/"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="喜歡電繪、寫故事、聽電子古典音樂"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
                 <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
